--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-/crude oil data/
-/EarningsDates/
-/flight data/
-/price data/
-/SEC income data/
-/yfinance income data/
-/.idea/
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+crude oil data
+EarningsDates
+flight data
+price data
+SEC income data
+yfinance income data
+venv
