--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 venv
 .idea
 /historical-data/historical-flight-data/raw/
-/historical-data/historical-flight-data/temp/
+/historical-data/historical-flight-data/temp/!/historical-data/historical-flight-data/formatted/
