--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ venv
 /historical-data/historical-flight-data/temp/!/historical-data/historical-flight-data/formatted/
 /historical-data/historical-flight-data/formatted/
 /data/
+/historical-data/FINAL/flight-data/
